1998-09-23  John R. Jackson  <jrj@purdue.edu>

	* server-src/amstatus.pl.in: sort the host and partition names.
	From David Wolfskill <dhw@whistle.com>.

1998-09-23  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/taper.c (getcmd): typo in last DEBUGging patch

1998-09-22  Tim Perkins  <Tim.Perkins@ddg.phar.cam.ac.uk>,  Alexandre Oliva <oliva@dcc.unicamp.br>

	* client-src/selfcheck.c (check_disk): fix VDUMP auto-detection

1998-09-22  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* changer-src/chg-mtx.sh.in: replace rew with rewind
	* changer-src/chg-zd-mtx.sh.in: ditto
	Reported by Henning Holtschneider <hh@loca.net>

	* client-src/sendsize.c: remove usage of #error
	Reported by Jay Orr <orr@vss.fsi.com>

1998-09-21  John R. Jackson  <jrj@purdue.edu>

	* man/amanda.8.in: document the new "tapebufs" parameter.

1998-09-21  Kelly Setzer  <setzer@telalink.net>

	* server-src/taper.c (NBUFS): replaced with conf_tapebufs
	(THRESHOLD): now means `empty bufs' instead of `full bufs'
	* server-src/conffile.c: add support for the "tapebufs" option
	* server-src/planner.c: ditto
	* examples/amanda.conf.in: add sample "tapebufs" entry

	* server-src/amlabel.c (main): adds entry to tapelist with date
 	19700101

1998-09-20  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/taper.c (getcmd): print DEBUGging output to stderr
	Reported by Henning Holtschneider <hh@loca.net>

1998-09-19  Eric Doutreleau <Eric.doutreleau@int-evry.fr>

	* server-src/driverio.h (MAX_DUMPERS): increased from 15 to 63 in
	order to launch more dumper in parallel
	* example/amanda.conf.in (inparallel): Add the fact that it is
 	limited by MAX_DUMPERS

1998-09-18  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* common-src/Makefile.am (libamanda_la_LDFLAGS): use libtool
 	-release instead of -version_info, so as to encode the Amanda
 	release number in the library name.  Problems related with
 	pre-installed libraries should disappear, and separate releases can